--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -21,6 +21,13 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
 
+      - name: Checkout cheribsd-getting-started/gh-pages
+        uses: actions/checkout@v2
+        with:
+          repository: CTSRD-CHERI/cheribsd-getting-started
+          ref: gh-pages
+          path: getting-started/23.11/
+
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
