--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = getting-started/23.11
 	url = https://github.com/CTSRD-CHERI/cheribsd-getting-started.git
 	branch = gh-pages
+[submodule "tutorial/23.11"]
+	path = tutorial/23.11
+	url = https://github.com/CTSRD-CHERI/cheribsd-tutorial.git
+	branch = gh-pages
